--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+phf = { version = "0.11", features = ["macros"] }
+
+[profile.release]
+strip = true
