--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -9,6 +9,9 @@ jobs:
   build-image:
     name: Build image
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
